# tiny-test

./: LICENSE  README.md  flake.nix  tiny-test.cabal
src/: Arbitrary.hs  Expectation.hs  Lib.hs  Matchers.hs  PropTest.hs  Result.hs  TestSuite.hs  Unit.hs
test/: Spec.hs
