name:                tiny-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tiny-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arbitrary
                     , Lib
                     , Matchers
                     , PropTest
                     , Result
                     , TestSuite
  build-depends:       base >= 4.7 && < 5
                     , rainbow
                     , random
                     , text
                     , validation
  default-language:    Haskell2010

test-suite tiny-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiny-test
                     , rainbow
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jisantuc/tiny-test
